examples/test/testpolicy15536.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15536
  namespace: namespace262
spec:
  podSelector:
    matchLabels:
      key29: value46
      key49: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value36
      podSelector:
        matchLabels:
          key38: value6
          key28: value17
          key36: value0
